// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Save matches snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <li
        class="mdc-list-item list-item"
        tabindex="0"
      >
        <i
          class="mdc-list-item__graphic material-icons"
        >
          
        </i>
        <a
          class="list-item__link"
          href="http://google.com"
          target="_blank"
        >
           
        </a>
        <span
          class="mdc-list-item__text"
        >
          <span
            class="mdc-list-item__primary-text list-item__text"
          >
            List Item Title
          </span>
          <span
            class="mdc-list-item__secondary-text list-item__text"
            contenteditable="false"
          >
            List Item Caption
          </span>
        </span>
        <i
          class="mdc-list-item__meta material-icons"
        >
          
        </i>
      </li>
    </div>
  </body>,
  "container": <div>
    <li
      class="mdc-list-item list-item"
      tabindex="0"
    >
      <i
        class="mdc-list-item__graphic material-icons"
      >
        
      </i>
      <a
        class="list-item__link"
        href="http://google.com"
        target="_blank"
      >
         
      </a>
      <span
        class="mdc-list-item__text"
      >
        <span
          class="mdc-list-item__primary-text list-item__text"
        >
          List Item Title
        </span>
        <span
          class="mdc-list-item__secondary-text list-item__text"
          contenteditable="false"
        >
          List Item Caption
        </span>
      </span>
      <i
        class="mdc-list-item__meta material-icons"
      >
        
      </i>
    </li>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Save matches snapshot when invalid URL and no linkTarget 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <li
        class="mdc-list-item list-item"
        tabindex="0"
      >
        <i
          class="mdc-list-item__graphic material-icons"
        >
          
        </i>
        <a
          class="list-item__link"
          href="#"
        >
           
        </a>
        <span
          class="mdc-list-item__text"
        >
          <span
            class="mdc-list-item__primary-text list-item__text"
          >
            List Item Title
          </span>
          <span
            class="mdc-list-item__secondary-text list-item__text"
            contenteditable="false"
          >
            List Item Caption
          </span>
        </span>
        <i
          class="mdc-list-item__meta material-icons"
        >
          
        </i>
      </li>
    </div>
  </body>,
  "container": <div>
    <li
      class="mdc-list-item list-item"
      tabindex="0"
    >
      <i
        class="mdc-list-item__graphic material-icons"
      >
        
      </i>
      <a
        class="list-item__link"
        href="#"
      >
         
      </a>
      <span
        class="mdc-list-item__text"
      >
        <span
          class="mdc-list-item__primary-text list-item__text"
        >
          List Item Title
        </span>
        <span
          class="mdc-list-item__secondary-text list-item__text"
          contenteditable="false"
        >
          List Item Caption
        </span>
      </span>
      <i
        class="mdc-list-item__meta material-icons"
      >
        
      </i>
    </li>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
